--- a/kitchen.css
+++ b/kitchen.css
@@ -591,6 +591,18 @@ ul{
 }
 
 @media only screen and (max-width: 600px){
+    header{
+        height: 20%;
+    }
+    
+    header .logo h1{
+        font-size: 1.5rem;
+    }
+
+   header .logo img{
+        width: 1.7rem;
+    }
+    
     .hero-text h1{
       font-size: 3.3rem;
       line-height: 1.3;
@@ -680,7 +692,7 @@ ul{
 
 
     .hero .padding{
-        padding: 0 2rem;
+        padding: 2rem;
     }
      
     .hero-button {
@@ -827,7 +839,7 @@ ul{
         border-bottom-left-radius: 1.2rem;
         border-bottom-right-radius: 1.2rem;
         height: 18rem;
-        width: 20.5rem;
+        width: 21.5rem;
         position: relative; 
      }
      
@@ -885,14 +897,14 @@ ul{
     
      .blue{  
         position: absolute;
-        left: 16rem;
-        bottom: 2.8rem;
+        left: 18rem;
+        bottom: 2.2rem;
         width: 1.3rem;
      }
     
     .lettuce{   
         position: absolute;
-        left: 12.8rem;
+        left: 13.3rem;
         bottom: 3.8rem;
         width: 12rem;
     }
@@ -900,17 +912,18 @@ ul{
     form input{
         border-radius: 10rem;
         border: none;
-        height: 4rem;
-        width: 15rem;
+        height: 3.5rem;
+        width: 17rem;
         position: relative;
+        margin-top: 1rem;
     }
     
      form button{
         padding: 1rem;
         border-radius: 50%;
         position: absolute;
-        left: 13.9rem;
-        top: 9.9rem;        
+        left: 16rem;
+        top: 10.7rem;        
      }
 
      form button i{
@@ -929,7 +942,7 @@ ul{
     .footer-text{
         line-height: 1.5;
         margin-bottom: 1rem;
-        width: 100vw;
+        width: 90vw;
     }
     
     .footer-text .logo{
