--- a/kitchen.css
+++ b/kitchen.css
@@ -592,7 +592,7 @@ ul{
 
 @media only screen and (max-width: 600px){
     header{
-        height: 20%;
+        height: 10rem;
     }
     
     header .logo h1{
